Fix collapse tree

--- a/client/components/Pencil/AppBar.scss
+++ b/client/components/Pencil/AppBar.scss
@@ -2,12 +2,13 @@
   height: 3rem;
   display: flex;
   align-items: center;
-  background-color: #fdd947;
+  background-color: #251843;
   padding: 0.5rem 1rem;
   font-weight: bolder;
   font-size: 1.5rem;
-  box-shadow: 0 2px #EEDA7B;
+  box-shadow: 0 2px #251843;
   z-index: 100;
+  color: white;
 }
 
 .left {
